// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuditScreenFooter Component Test renders AuditScreenFooter Screen with continue disabled 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#ffffffff",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "space-around",
      "paddingHorizontal": 10,
      "paddingVertical": 5,
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "marginHorizontal": 3,
      }
    }
  >
    <View
      style={
        [
          {
            "height": 45,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#BABBBE",
              "borderRadius": 5,
              "elevation": 1,
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="btnContinue"
        >
          <Text
            style={
              {
                "color": "#ffffffff",
                "fontFamily": "Roboto-Medium",
                "fontSize": 16,
                "fontWeight": "normal",
                "textAlign": undefined,
              }
            }
          >
            [missing "en.GENERICS.CONTINUE" translation]
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`AuditScreenFooter Component Test renders AuditScreenFooter Screen with continue enabled 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#ffffffff",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "space-around",
      "paddingHorizontal": 10,
      "paddingVertical": 5,
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "marginHorizontal": 3,
      }
    }
  >
    <View
      style={
        [
          {
            "height": 45,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#0071e9",
              "borderRadius": 5,
              "elevation": 1,
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="btnContinue"
        >
          <Text
            style={
              {
                "color": "#ffffffff",
                "fontFamily": "Roboto-Medium",
                "fontSize": 16,
                "fontWeight": "normal",
                "textAlign": undefined,
              }
            }
          >
            [missing "en.GENERICS.CONTINUE" translation]
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`AuditScreenFooter Component renders the footer with save set to true 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#ffffffff",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "space-around",
      "paddingHorizontal": 10,
      "paddingVertical": 5,
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "marginHorizontal": 3,
      }
    }
  >
    <View
      style={
        [
          {
            "height": 45,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ffffffff",
              "borderColor": "#0071e9",
              "borderRadius": 5,
              "borderWidth": 1,
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="btnSave"
        >
          <Text
            style={
              {
                "color": "#0071e9",
                "fontFamily": "Roboto-Medium",
                "fontSize": 16,
                "fontWeight": "normal",
                "textAlign": undefined,
              }
            }
          >
            [missing "en.GENERICS.SAVE" translation]
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "flex": 1,
        "marginHorizontal": 3,
      }
    }
  >
    <View
      style={
        [
          {
            "height": 45,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#0071e9",
              "borderRadius": 5,
              "elevation": 1,
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="btnContinue"
        >
          <Text
            style={
              {
                "color": "#ffffffff",
                "fontFamily": "Roboto-Medium",
                "fontSize": 16,
                "fontWeight": "normal",
                "textAlign": undefined,
              }
            }
          >
            [missing "en.GENERICS.CONTINUE" translation]
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
